--- a/src/styles/MenuBar.css
+++ b/src/styles/MenuBar.css
@@ -1,6 +1,6 @@
 .control-group {
-    padding: 28px 28px 4px 28px;
-    margin-bottom: 4px;
+    padding: 28px 28px 2px 28px;
+    margin-bottom: 2px;
     background: var(--background-color);
     position: fixed;
     top: 0;
